<resources>
    <string name="app_name">WRMS(우듬지입고관리시스템)</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!--공통-->
    <string name="app">우듬지 입고 관리 시스템</string>
    <string name="save">저장</string>
    <string name="delete">삭제</string>
    <string name="add">추가</string>
    <string name="ok">확인</string>
    <string name="retry">재시도</string>
    <string name="update">수정</string>
    <string name="cancel">취소</string>



    <string name="back_exit">\'뒤로\' 버튼을 한번 더 누르시면 종료됩니다.</string>

    <!--계량 작업-->
    <string name="measurement_work">계량 작업</string>
    <string name="scale_a">A</string>
    <string name="scale_b">B</string>
    <string name="company_name">거래처명</string>
    <string name="company_boss">대표자명</string>
    <string name="company_tel">전화번호</string>
    <string name="product_name">상품명</string>
    <string name="product_price">단가</string>
    <string name="product_date">입고일</string>
    <string name="current_time">현재 시간</string>
    <string name="total_weight">전체 중량(kg)</string>
    <string name="box_weight">박스 중량(kg)</string>
    <string name="box_account">박스 수량</string>
    <string name="palette_weight">팔레트 중량(kg)</string>
    <string name="deductible_weight">공제 중량(g)(10kg당)</string>
    <string name="real_weight">실 중량(kg)</string>
    <string name="toggle_on">저울 연결 해제</string>
    <string name="toggle_off">저울 연결 시도</string>
    <string name="product_select">상품 정보 선택</string>
    <string name="company_select">거래처 정보 선택</string>
    <string name="box_select">박스 정보 선택</string>

    <string name="direct_input">직접 입력</string>



    <!--계량 내역-->
    <string name="measurement_history">계량 내역</string>
    <string name="yesterday">어제</string>
    <string name="today">오늘</string>
    <string name="week">1주일</string>
    <string name="search">검색</string>
    <string name="send_erp">ERP 전송</string>
    <string name="no_data_available">데이터가 없습니다.</string>
    <string name="measurement_detail">계량 상세 정보</string>
    <string name="erp_time">ERP 연동 시간</string>


    <!--기초 자료-->
    <string name="basic_data">기초 자료</string>
    <string name="product_info">상품 정보</string>
    <string name="company_info">거래처 정보</string>
    <string name="box_info">박스 정보</string>
    <string name="load_file">파일 가져오기</string>
    <string name="export_file">파일 내보내기</string>
    <string name="product_code">상품 코드</string>
    <string name="company_code">거래처 코드</string>
    <string name="box_name">박스명</string>
    <string name="toast_check_blank">입력되지 않은 정보가 있습니다.</string>
    <string name="toast_save">저장되었습니다.</string>


    <!--설정-->
    <string name="setting">설정</string>
    <string name="scale_a_name">A 저울 이름</string>
    <string name="scale_a_ip">A 저울 IP</string>
    <string name="scale_a_port">A 저울 Port</string>
    <string name="scale_b_name">B 저울 이름</string>
    <string name="scale_b_ip">B 저울 IP</string>
    <string name="scale_b_port">B 저울 Port</string>
    <string name="auth_key">인증키</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>