<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/basic_data_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/basic_data"
            android:textColor="@color/colorBlack"
            android:textSize="40dp"
            android:textFontWeight="700"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <Button
            android:id="@+id/product_info_btn"
            android:text="@string/product_info"
            android:textSize="35dp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            app:layout_constraintTop_toBottomOf="@+id/basic_data_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHeight_percent="0.15"/>

        <Button
            android:id="@+id/company_info_btn"
            android:text="@string/company_info"
            android:textSize="35dp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            app:layout_constraintTop_toBottomOf="@+id/product_info_btn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHeight_percent="0.15"/>

        <Button
            android:id="@+id/box_info_btn"
            android:text="@string/box_info"
            android:textSize="35dp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            app:layout_constraintTop_toBottomOf="@+id/company_info_btn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHeight_percent="0.15"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>