<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.InfoActivity">

        <ImageButton
            android:id="@+id/info_back_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_baseline_arrow_back_24"
            android:layout_margin="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/info_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/product_info"
            style="@style/Work_FontTheme1"
            app:layout_constraintLeft_toLeftOf="@+id/info_back_btn"
            app:layout_constraintTop_toBottomOf="@+id/info_back_btn"/>

        <Button
            android:id="@+id/info_add_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/add"
            android:textSize="25dp"
            app:layout_constraintTop_toBottomOf="@+id/info_title"
            app:layout_constraintLeft_toLeftOf="@+id/info_title"
            app:layout_constraintWidth_percent="0.15"/>


        <Button
            android:id="@+id/load_file_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/load_file"
            android:textSize="25dp"
            app:layout_constraintTop_toTopOf="@+id/info_add_btn"
            app:layout_constraintLeft_toRightOf="@+id/info_add_btn"
            app:layout_constraintWidth_percent="0.3"/>

        <Button
            android:id="@+id/export_file_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/export_file"
            android:textSize="25dp"
            app:layout_constraintTop_toTopOf="@+id/info_add_btn"
            app:layout_constraintLeft_toRightOf="@+id/load_file_btn"
            app:layout_constraintWidth_percent="0.3"/>

        <FrameLayout
            android:id="@+id/weighing_list_frame_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_add_btn">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/textview_empty"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/no_data_available"
                android:visibility="gone" />
        </FrameLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>