<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.InfoAddActivity">

        <TextView
            android:id="@+id/info_add_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/product_info"
            android:textColor="@color/colorBlack"
            android:textSize="40dp"
            android:textFontWeight="700"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <ImageView
            android:id="@+id/info_back_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_baseline_clear_24"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toTopOf="@id/info_add_title"
            app:layout_constraintBottom_toBottomOf="@+id/info_add_title"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/info_add_code_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_code"
            style="@style/Work_FontTheme1"
            android:layout_marginTop="40dp"
            app:layout_constraintLeft_toLeftOf="@+id/info_add_title"
            app:layout_constraintTop_toBottomOf="@+id/info_add_title"/>

        <EditText
            android:id="@+id/info_add_code_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:background="@drawable/selector_scale_button"
            android:inputType="number"
            style="@style/Work_FontTheme2"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/info_add_code_text"
            app:layout_constraintLeft_toLeftOf="@+id/info_add_code_text"
            app:layout_constraintWidth_percent="0.5"/>

        <TextView
            android:id="@+id/info_add_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            style="@style/Work_FontTheme1"
            android:layout_marginTop="40dp"
            app:layout_constraintLeft_toLeftOf="@+id/info_add_code_value"
            app:layout_constraintTop_toBottomOf="@+id/info_add_code_value"/>

        <EditText
            android:id="@+id/info_add_name_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:background="@drawable/selector_scale_button"
            android:layout_marginTop="20dp"
            style="@style/Work_FontTheme2"
            app:layout_constraintTop_toBottomOf="@+id/info_add_name_text"
            app:layout_constraintLeft_toLeftOf="@+id/info_add_name_text"
            app:layout_constraintWidth_percent="0.8"/>

        <TextView
            android:id="@+id/info_add_value_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_price"
            style="@style/Work_FontTheme1"
            android:layout_marginTop="40dp"
            app:layout_constraintLeft_toLeftOf="@+id/info_add_name_value"
            app:layout_constraintTop_toBottomOf="@+id/info_add_name_value"/>

        <EditText
            android:id="@+id/info_add_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:background="@drawable/selector_scale_button"
            android:layout_marginTop="20dp"
            android:inputType="number"
            style="@style/Work_FontTheme2"
            android:digits="1234567890."
            app:layout_constraintTop_toBottomOf="@+id/info_add_value_text"
            app:layout_constraintLeft_toLeftOf="@+id/info_add_value_text"
            app:layout_constraintWidth_percent="0.5"/>

        <Button
            android:id="@+id/info_delete_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:layout_margin="20dp"
            android:textSize="35dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <Button
            android:id="@+id/info_save_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_margin="20dp"
            android:textSize="35dp"
            app:layout_constraintBottom_toTopOf="@+id/info_delete_btn"/>
            <!--app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.92"/>-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>