<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/measure_history_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/measurement_history"
            android:textColor="@color/colorBlack"
            android:textSize="40dp"
            android:textFontWeight="700"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/measure_history_title">

            <RadioButton
                android:id="@+id/button_search_yesterday"
                style="@android:style/Widget.CompoundButton.RadioButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/custom_radio_button"
                android:button="@android:color/transparent"
                android:padding="8dp"
                android:text="@string/yesterday"
                android:textSize="20dp"
                android:textColor="@drawable/radio_text_selected"
                android:textAlignment="center"/>

            <RadioButton
                android:id="@+id/button_search_today"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/custom_radio_button"
                android:button="@android:color/transparent"
                android:padding="8dp"
                android:checked="true"
                android:text="@string/today"
                android:textSize="20dp"
                android:textColor="@drawable/radio_text_selected"
                android:textAlignment="center"
                />

            <RadioButton
                android:id="@+id/button_search_week"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/custom_radio_button"
                android:button="@android:color/transparent"
                android:padding="8dp"
                android:text="@string/week"
                android:textSize="20dp"
                android:textColor="@drawable/radio_text_selected"
                android:textAlignment="center"
                />

        </RadioGroup>

        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/info_background"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorGrey"
            app:layout_constraintTop_toBottomOf="@id/radio_group"
            app:layout_constraintHeight_percent="0.12"/>

        <Button
            android:id="@+id/button_search_date_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:background="?selectableItemBackgroundBorderless"
            android:drawableRight="@drawable/ic_baseline_date_range_24"
            android:text="2022/05/01"
            style="@style/Work_FontTheme1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radio_group" />

        <TextView
            android:id="@+id/textview_search_dash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="~"
            style="@style/Work_FontTheme1"
            app:layout_constraintBottom_toBottomOf="@+id/button_search_date_from"
            app:layout_constraintStart_toEndOf="@+id/button_search_date_from"
            app:layout_constraintTop_toTopOf="@+id/button_search_date_from" />

        <Button
            android:id="@+id/button_search_date_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:background="?selectableItemBackgroundBorderless"
            android:drawableRight="@drawable/ic_baseline_date_range_24"
            android:text="2022/05/01"
            style="@style/Work_FontTheme1"
            app:layout_constraintBottom_toBottomOf="@+id/button_search_date_from"
            app:layout_constraintStart_toEndOf="@+id/textview_search_dash"
            app:layout_constraintTop_toTopOf="@+id/button_search_date_from" />

        <TextView
            android:id="@+id/history_search_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Work_FontTheme1"
            android:text="0 개"
            app:layout_constraintRight_toRightOf="@+id/button_search_detail"
            app:layout_constraintTop_toTopOf="@id/button_search_date_from"
            app:layout_constraintBottom_toBottomOf="@id/button_search_date_from"
            />



        <LinearLayout
            android:id="@+id/history_spinner_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/work_info_button"
            app:layout_constraintLeft_toLeftOf="@+id/button_search_date_from"
            app:layout_constraintTop_toBottomOf="@+id/button_search_date_from">
            <Spinner
                android:id="@+id/history_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="업체명"
                />
        </LinearLayout>


        <EditText
            android:id="@+id/search_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/work_weight_text"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingLeft="50dp"
            android:singleLine="true"
            style="@style/Work_FontTheme2"
            app:layout_constraintTop_toTopOf="@+id/history_spinner_layout"
            app:layout_constraintBottom_toBottomOf="@+id/history_spinner_layout"
            app:layout_constraintLeft_toRightOf="@+id/history_spinner_layout"
            app:layout_constraintRight_toLeftOf="@+id/button_search_detail"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_search_24"
            android:layout_marginLeft="10dp"
            app:layout_constraintTop_toTopOf="@+id/search_edittext"
            app:layout_constraintLeft_toLeftOf="@+id/search_edittext"
            app:layout_constraintBottom_toBottomOf="@+id/search_edittext"/>

        <Button
            android:id="@+id/button_search_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:gravity="center"
            android:textSize="25dp"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="@+id/history_spinner_layout"
            app:layout_constraintTop_toTopOf="@+id/history_spinner_layout"
            app:layout_constraintRight_toRightOf="@+id/radio_group"/>

        <FrameLayout
            android:id="@+id/weighing_list_frame_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info_background">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/weighing_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/textview_empty"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/no_data_available"
                android:visibility="gone" />
        </FrameLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>